--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,9 @@ name: race-info
 
 # 定期実行間隔
 on:
-  push:
-  #schedule:
-  #10:00
-  #- cron: '0 23 * * *'
+  schedule:
+  #8:30
+  - cron: '0 23 * * *'
 
 jobs:
   build:
