--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
           pip install line-bot-sdk
           pip install beautifulsoup4
           pip install requests
+          pip install　selenium
+          brew install chromedriver
           
       - name: Run script
         run: |
