--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           pip install beautifulsoup4
           pip install requests
           pip install selenium
-          pip install chromedriver-binary-auto
+          pip install chromedriver-binary==102.0.5005.61
           brew install chromedriver
           
       - name: Run script
