--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
           pip install beautifulsoup4
           pip install requests
           pip install selenium
-          pip install chromedriver-binary==102.0.5005.61
-          brew install chromedriver
+          pip install chromedriver-binary-auto
           
       - name: Run script
         run: |
